# AppiumAndroidTest

./: .gitignore  README.md  config.py  pyproject.toml
tests/android_app/: conftest.py
tests/android_app_culture/: locators.py  test_mp_culture.py
tests/android_app_local/: conftest.py  test_mp_culture.py  test_wikipedia.py
